<resources>
    <string name="app_name">Fitness Social</string>

    <string name="app_title">Fitness Social</string>

    <!-- Google Play Variables -->
    <string name="google_api_key">AIzaSyAltTgaCx_vxcntwIeiAYQd1eY5FLx3_S8</string>

    <!-- Facebook Variables -->
    <string name="facebook_app_id">1182619848467649</string>
    <string name="facebook_app_pass">bdc41db2e5efd44de50c969e6e7c7634</string>
    <!--<string name="facebook_app_hash">A2gdy6smDZ449FDrM2yteH/7PL8=</string>-->
    <string name="facebook_app_hash">P70eeHc6MVAeM7Kfq3AWGFySXqo=</string>

    <string name="splash_000">Tap to Proceed</string>
    <string name="splash_001"></string>
    <string name="splash_002"></string>
    <string name="splash_003"></string>

    <string name="tab_000">Profile</string>
    <string name="tab_001">Events</string>
    <string name="tab_002">Map</string>

    <string name="frag_profile_000">Profile</string>
    <string name="frag_profile_001">Name:</string>
    <string name="frag_profile_002">Age:</string>
    <string name="frag_profile_003">DOB:</string>
    <string name="frag_profile_004">E-Mail:</string>
    <string name="frag_profile_005">Gender:</string>
    <string name="frag_profile_006">Hobbies:</string>
    <string name="frag_profile_007">Activities:</string>
    <string name="frag_profile_008">Mask Name:</string>
    <string name="frag_profile_009">Phone:</string>

    <string name="frag_settings_000">Settings</string>
    <string name="frag_settings_001">GPS Location</string>
    <string name="frag_settings_002">User Privacy</string>
    <string name="frag_settings_002a">Masked</string>
    <string name="frag_settings_002b">Basic</string>
    <string name="frag_settings_002c">Opened</string>
    <string name="frag_settings_003">Terms of Service</string>

    <string name="frag_event_000">Events</string>
    <string name="frag_event_001"></string>
    <string name="frag_event_002"></string>

    <string name="frag_map_000">Map</string>
    <string name="frag_map_001"></string>
    <string name="frag_map_002"></string>

</resources>
